# Argus

./: .gitignore  Argus_design_doc.md  README.md  companies.yaml  company_fetcher.py  config.py  fix_ats_config.py  generic_crawler.py  investigate_unverified.py  job_search_agent_design_doc.md  job_store.py  main.py  matcher.py  models.py  output.py  pyproject.toml  requirements.txt  resume_parser.py  run_daily_search.sh  run_search.py  scheduled_search.py  search.py  web_crawler.py
config/: companies.yaml  titles.yaml
config/profiles/Ming/: companies.yaml  titles.yaml
config/profiles/Yaxi/: companies.yaml  titles.yaml
config/profiles/default/: titles.yaml
job_fetchers/: __init__.py  apple_jobs.py  arbeitnow.py  base.py  bigtech.py  google_careers.py  greenhouse.py  jsearch.py  lever.py  meta_careers.py  remoteok.py
job_results/sample/Anthropic/: jobs.json
job_results/sample/OpenAI/: jobs.json
job_search_agent/: __init__.py  orchestrator.py
job_search_agent/ats/: __init__.py  generic.py
